ikiwiki (2.65) UNRELEASED; urgency=low

  * aggregate: Expire excess or old items on the same pass that adds them,
    not only on subsequent passes.
  * editdiff: Broken since 2.62 due to wrong syntax, now fixed.
  * aggregate: Support atom feeds with only a summary element, and no content
    elements.

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Sep 2008 14:26:56 -0400

ikiwiki (2.64) unstable; urgency=low

  * Avoid uninitialised value when --dumpsetup is used and no srcdir/destdir
    specified.
  * ddate: Stop clobbering timeformat when not enabled.
  * progress: New plugin to generate progress bars (willu)
  * Add allow_symlinks_before_srcdir to config so websetup doesn't eat it.
  * img: Support sizes like 200x. Closes: #475149
  * goodstuff: Remove otl plugin from the bundle since it needs a significant
    external dependency and is not commonly used. If you use otl, make sure
    you explicitly enable it now.
  * goodstuff: Add more, progress, and table plugins to the bundle.
  * Improve error message if external plugin fails to load. Closes: #498458
  * Directive documentation broken out of the plugin documentation and into 
    pages suitable to be used as an underlay. Thanks to Willu for doing most
    of the tedious work.
  * Move the directive documentation into its own underlay, separate from
    basewiki, since it's sorta large compared to the rest of basewiki.
  * listdirectives: Enable use of the directives underlay.
  * Removed the obsolete blog page from the basewiki. ikiwiki/blog still
    remains, but is now deprecated too.
  * Removed old redirecton pages from basewiki (helponformatting,
    markdown, openid, pagespec, preprocessordirective, subpage, wikilink).
  * inline: Treat rootpage as a link, so that it can refer to a subpage
    without hardcoding the path.

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Sep 2008 16:58:25 -0400

ikiwiki (2.63) unstable; urgency=low

  * Set cookies HttpOnly.
  * Typo. Closes: #497003